# vsomeip_qnx

./: CMakeLists.txt  readme.md  root@10.100.5.63  vsomeip_client.json
app/: vsomeip_ecu.cpp
lib/: libvsomeip_ecu.cpp  vsomeip_ecu.code-workspace
lib/public/: base.h  hello.h
